223 desarrollo de la UI del post del caso de uso de oferta (#239)
* Modificaciones necesarias:
He añadido el atributo ID que era necesario.
He modificado el atributo dirigido a para que pueda ser opcional y no tenga que ser o para clientes o para socios obligatoriamente.

* Modificación en los botones para la navegación.

* Creación del método post en la web

* Modificaciones en las pruebas unitarias por las modificaciones de la API.
