# src/AppForSEII2526.Web/OpenAPIs/swagger.json
@@ -620,8 +620,8 @@
           }
         },
         "responses": {
-          "200": {
-            "description": "OK",
+          "201": {
+            "description": "Created",
             "content": {
               "text/plain": {
                 "schema": {
@@ -1347,7 +1347,8 @@
           },
           "paraSocio": {
             "type": "integer",
-            "format": "int32"
+            "format": "int32",
+            "nullable": true
           },
           "nombreUsuario": {
             "type": "string",
@@ -1563,6 +1564,10 @@
       "HerramientasParaOfertarDTO": {
         "type": "object",
         "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
           "nombre": {
             "type": "string",
             "nullable": true
@@ -1626,6 +1631,10 @@
       "OfertaDetalleDTO": {
         "type": "object",
         "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
           "fechaInicio": {
             "type": "string",
             "format": "date-time"
@@ -1639,7 +1648,8 @@
             "format": "date-time"
           },
           "paraSocios": {
-            "$ref": "#/components/schemas/TiposDirigidaOferta"
+            "$ref": "#/components/schemas/TiposDirigidaOferta",
+            "nullable": true
           },
           "metodoPago": {
             "$ref": "#/components/schemas/TiposMetodosPago"
@@ -1872,6 +1882,14 @@
           "cantidad": {
             "maximum": 2147483647,
             "minimum": 1,
+            "type": "integer",
+            "format": "int32"
+          },
+          "precio": {
+            "type": "number",
+            "format": "double"
+          },
+          "reparacionId": {
             "type": "integer",
             "format": "int32"
           },
